[workspace]
resolver = "2"
members = [
    "libcircuitcubes",
    "circuit-cubes",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Dusten Sobotta <dusten@hey.com>"]
license = "Proprietary"
description = "rust bindings for Tenka Circuit Cubes"
repository = "https://github.com/dsobotta/mqtt-circuit-cubes"

[workspace.dependencies]
btleplug = { version = "0.11", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44.2", features = ["macros", "rt", "rt-multi-thread"] }
futures = "0.3.31"
anyhow = "1"
pretty_env_logger = "0.5.0"
tokio-stream = { version = "0.1.17", features = ["sync"] }
uuid = "1.16.0"
