[package]
name = "circuit-cubes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libcircuitcubes = { path = "../libcircuitcubes" }
serde.workspace = true
serde_json.workspace = true
btleplug.workspace = true
tokio.workspace = true
futures.workspace = true
anyhow = "1"
pretty_env_logger = "0.5.0"
tokio-stream = { version = "0.1.17", features = ["sync"] }
uuid = "1.16.0"


[[bin]]
name = "circuit-cubes"
test = false
doctest = false
bench = false