[package]
name = "circuit-cubes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libcircuitcubes = { path = "../libcircuitcubes" }
serde.workspace = true
serde_json.workspace = true
btleplug.workspace = true
tokio.workspace = true
futures.workspace = true
anyhow.workspace = true
pretty_env_logger.workspace = true
tokio-stream.workspace = true
uuid.workspace = true


[[bin]]
name = "circuit-cubes"
test = false
doctest = false
bench = false