[package]
name = "libcircuitcubes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
btleplug.workspace = true
tokio.workspace = true

[lib]
name = "libcircuitcubes"
path = "src/lib.rs"
test = false
doctest = false
bench = false