[package]
name = "libcircuitcubes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
btleplug.workspace = true
tokio.workspace = true
futures.workspace = true
anyhow.workspace = true
pretty_env_logger.workspace = true
tokio-stream.workspace = true
uuid.workspace = true

[lib]
name = "libcircuitcubes"
path = "src/lib.rs"
test = false
doctest = false
bench = false